[package]
name = "dlmgr-cli"
version = "0.1.1"
edition = "2024"
description = "CLI tool for working with and testing the downlaod manager in the dlmgr crate"
license = "MPL-2.0"

[dependencies]
dlmgr = { version = "0.1.1", path = "../dlmgr" }

anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "tracing", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
reqwest = { version = "0.12.24", features = ["http2"] }
indicatif = "0.18.2"
