[package]
name = "dlmgr"
version = "0.1.1"
edition = "2024"
description = "A multi-threaded file downloader."
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
hex = "0.4.3"
reqwest = { version = "0.12.23", default-features = false }
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["net"] }
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
range-server = { path = "../range-server" }

