[package]
name = "range-server"
version = "0.1.0"
edition = "2024"
description = "Simple HTTP server that supports range requests, to facilitate testing the download manager."
license = "MPL-2.0"

[dependencies]
axum = "0.8.6"
axum-extra = "0.10.3"
axum-range = "1.0.0"
tokio = { version = "1.47.1", features = ["net", "macros", "rt", "rt-multi-thread"] }
rand = "0.9.2"
reqwest = { version = "0.12.23" }
sha2 = "0.10.9"
tempfile = "3.23.0"
portpicker = "0.1.1"
hex = "0.4.3"

